--- a/app/src/main/res/layout/listplants.xml
+++ b/app/src/main/res/layout/listplants.xml
@@ -1,54 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/app"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="432dp"
-        android:layout_height="271dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="2dp"
-        android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/etPlantName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:textColor="@android:color/black"
-            android:textSize="30sp" />
+    <TextView
+        android:id="@+id/tvPlantName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:ems="10"
+        android:textColor="@android:color/black"
+        android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/tvPlantReminder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:text="Hours since last edit: 0"
-            android:textColor="@android:color/black"
-            android:textSize="30sp"
-            android:visibility="visible" />
+    <TextView
+        android:id="@+id/tvPlantReminder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:text="Hours since last edit: 0"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
+        android:visibility="visible" />
 
-        <ImageView
-            android:id="@+id/imgPlantPic"
-            android:layout_width="wrap_content"
-            android:layout_height="107dp"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="28dp"
-            android:visibility="visible"
-            app:srcCompat="@drawable/ic_launcher_foreground"
-            tools:srcCompat="@drawable/fishpool" />
+    <ImageView
+        android:id="@+id/imgPlantPic"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="28dp"
+        android:visibility="visible"
+        app:srcCompat="@drawable/ic_launcher_foreground"
+        tools:srcCompat="@drawable/fishpool" />
 
-    </LinearLayout>
+</LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+
